# frsutils

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  MANIFEST.in  PHASE4_DELETED_FILES.txt  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SUPPORT.md  mkdocs.yml  paper.bib  paper.md  project_structure.txt  pyproject.toml  pytest.ini  run.json  run_log.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  extended-tests.yml  paper.yml
FRsutils/: __init__.py
FRsutils/api/: __init__.py  approximations.py  config.py  models.py  results.py  scoring.py  similarity.py
FRsutils/core/: __init__.py  approximation_engines.py  approximations.py  backends.py  fuzzy_quantifiers.py  implicators.py  owa_weights.py  similarities.py  similarity_engine.py  tnorms.py
FRsutils/sandbox/: grid_search_FRSMOTE.py  readme.txt  use_cupy.py  use_frsmote.py  use_imblearn_pipeline.py  use_implicators.py  use_itfrs.py  use_keel_audit.py  use_lazy_constructible_mixin.py  use_owa.py  use_owafrs.py  use_quantifiers.py  use_similarities.py  use_similarity.py  use_tnorms.py  use_vqrs.py
FRsutils/utils/: backend.py  base_component_with_logger.py  fuzzy_rough_dataset_validation_utils.py  init_helpers.py  validation_utils.py
archive/keel_audit_wip/: KEEL_Audit_Utility-2_working.py  KEEL_Audit_Utility3.py  KEEL_Audit_Utility4.py  KEEL_Audit_Utility5.py  KEEL_Audit_Utility6.py  KEEL_Audit_Utility_simple_working.py  README.md
benchmarks/: benchmark_fuzzy_rough_execution.py  benchmark_smoke.py
docs/: README.md  backend_aware_components.md  backend_execution_status.md  benchmark_suite.md  cleanup_consistency.md  cupy_info.md  documentation_smoke_check.md  frsmote_migration.md  gpu_resident_itfrs.md  gpu_resident_vqrs.md  implicators_info.md  index.md  itfrs_info.md  joss_final_submission_checklist.md  joss_metadata_check.md  owa_weights_info.md  owafrs_info.md  owafrs_non_gpu_resident_decision.md  paper_claims.md  phase_2_public_execution_metadata.md  phase_3_gpu_resident_itfrs.md  phase_3_positive_region_scorer.md  phase_4_gpu_resident_vqrs.md  phase_5_owafrs_non_gpu_resident_decision.md  phase_6_benchmark_suite.md  phase_8_cleanup_consistency.md  positive_region_scorer.md  public_api.md  public_api_contract.md  public_execution_metadata.md  release_checklist.md  release_paper_hardening.md  release_validation_commands.md  similarities_info.md  submit_readiness_report.md  tnorms_info.md  vqrs_info.md
docs/concepts/: fuzzy_quantifiers_info.md  implicators_info.md  itfrs_info.md  owa_weights_info.md  owafrs_info.md  similarities_info.md  tnorms_info.md  vqrs_info.md
docs/developer/: archive_and_doi.md  joss_submission_checklist.md  reference_data_migration_inventory.json  reference_data_migration_inventory.md  release.md
docs/user/: backends.md  benchmarks.md  computation_contracts.md  configuration.md  glossary.md  performance_benchmarking.md  public_api.md  reference_study.md
examples/: benchmark_smoke.py  example_1.py  example_2_with_Similarity_matrix.py  example_3_POS_scorer.py  phase7_benchmark_smoke.py  phase7_public_api_quickstart.py  public_api_quickstart.py
experiments/: benchmark_oversamplers_minmax.py  benchmark_oversamplers_minmax_non_incremental.py  experiment_1.py  experiment_1_non_pipeline.py  experiment_1_pipeline.py  python m experiments benchmark.txt
frsutils/: __init__.py
frsutils/api/: __init__.py  approximations.py  config.py  models.py  results.py  scoring.py  similarity.py
frsutils/core/: __init__.py  approximation_engines.py  (+7 more)
fuzzy_rough_oversampling/: README.md  pyproject.toml
fuzzy_rough_oversampling/docs/: phase_2_package_boundary.md  phase_3_frsmote_migration.md  phase_4_frsutils_cleanup.md  phase_5_compatibility_tests.md  phase_6_docs_and_migration.md  phase_7_no_backward_compatibility.md
fuzzy_rough_oversampling/src/fuzzy_rough_oversampling/: __init__.py  _frsutils.py  _sampling_utils.py  _version.py  base.py  registry.py  validation.py
fuzzy_rough_oversampling/src/fuzzy_rough_oversampling/algorithms/: __init__.py  frsmote.py
fuzzy_rough_oversampling/tests/: test_frsmote_fit_resample.py  test_frsmote_no_backward_compat.py  test_frsmote_pipeline_gridsearch_compat.py  test_frsmote_registration.py  test_frsmote_sklearn_compat.py  test_package_import.py  test_registry.py
lessons_learned_and_trainings/: Design_Patterns_used_And_Clean_Code.docx  Documentation_in_projects.docx  FRsutils_flat_config_naming_standard.md  For_Developers.md  ML_testing_tools_and_best_practices.docx  Prompt_For_FRSMOTE_Experiment_generation.txt  Python_coding_styles_and_good_practices.docx  TODO.txt  Tools_needed.docx  design_patterns_and_clean_code_checklist.md  doxygen_info.docx  lessons_learned.txt  pip_conda_issues.docx  prompt_for_sysnthetic_data.txt  prompts.docx  pytest_training.docx
md_files/: implicators_info.md  itfrs_info.md  similarities_info.md  tnorms_info.md  vqrs_info.md
plan/: tasks.md
scripts/: __init__.py  capture_cuda_validation.py  run_slow_test_shard.py  validate_installed_public_api.py  validate_joss_submission.py
studies/: README.md  __init__.py
temp/: gridsearch_results.xlsx  gridsearch_revalidation_fold_metrics.json  gridsearch_revalidation_fold_scores.xlsx  gridsearch_revalidation_summary.xlsx
tests/: Data_calculations.docx  Justification_of_correctness_of_outputs.odt  __init__.py  _cupy_test_support.py  _fake_cupy_backend.py  generate_data_matrix_based_on_scalar_values.py  pytest.ini  reference_data_loader.py  reference_data_store.py  run_tests_debug_mode.py  snippets.py  syntetic_data_for_tests.py  synthetic_data_store.py  test_FRSMOTE.py  test_config_normalization_utils.py  test_frsmote_gridsearch_pipeline_compat.py  test_frsmote_pipeline_gridsearch_compat.py  test_fuzzy_quantifiers.py  test_owafrs.py  test_procedures.md  test_similarity_matrix_building.py  test_vqrs.py
(+173 files in other folders)
